--- a/index.html
+++ b/index.html
@@ -6,42 +6,126 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <title>Hubert Bukowski</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-2 bg-purple flex-column">
-                <img id="usr-logo" src="static/images/person-4.png" alt="user-icon">
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                      <a class="nav-link active" href="#">Active</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link disabled" href="#">Disabled</a>
-                    </li>
-                  </ul>
-            </div>
-            <div class="col-sm-10">
-                <div class="row h-20">
-                </div>
-                <div class="row">
+  <div class="container-fluid">
 
-                    HUBERT
-
-                </div>
-                <div class="row h-20">
-                </div>
-            </div>
-        </div>
+    <!-- Section One -->
+    <div class="row row-fullscreen" id="section-1">
+      <div class="col-12 col-md-2 col-shadow bg-cv-primary">
+        <nav class="navbar bg-cv-primary">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="#section-1" class="nav-logo-link">
+                <p class="nav-logo text-shadow" id="logo-h">H</p>
+                <p class="nav-logo text-shadow" id="logo-b">B</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-nav nav-link" href="#section-2">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-nav nav-link" href="#section-3">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-nav nav-link" href="#section-4">Work</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="col-12 col-md-10">
+        <!--Content-->
+      </div>
     </div>
 
+    <!-- Section Two -->
+    <div class="row row-fullscreen" id="section-2">
+      <div class="col-12 col-md-2 col-shadow bg-cv-primary">
+        <nav class="navbar bg-cv-primary">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="#section-1" class="nav-logo-link">
+                <p class="nav-logo text-shadow" id="logo-h">H</p>
+                <p class="nav-logo text-shadow" id="logo-b">B</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-nav nav-link" href="#section-2">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-nav nav-link" href="#section-3">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-nav nav-link" href="#section-4">Work</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="col-12 col-md-10">
+        <!--Content-->
+      </div>
+    </div>
+
+    <!-- Section Three -->
+    <div class="row row-fullscreen" id="section-3">
+      <div class="col-12 col-md-2 col-shadow bg-cv-primary">
+        <nav class="navbar bg-cv-primary">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="#section-1" class="nav-logo-link">
+                <p class="nav-logo text-shadow" id="logo-h">H</p>
+                <p class="nav-logo text-shadow" id="logo-b">B</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-nav nav-link" href="#section-2">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-nav nav-link" href="#section-3">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-nav nav-link" href="#section-4">Work</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="col-12 col-md-10">
+        <!--Content-->
+      </div>
+    </div>
+
+    <!-- Section Four -->
+    <div class="row row-fullscreen" id="section-4">
+      <div class="col-12 col-md-2 col-shadow bg-cv-primary">
+        <nav class="navbar bg-cv-primary">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="#section-1" class="nav-logo-link">
+                <p class="nav-logo text-shadow" id="logo-h">H</p>
+                <p class="nav-logo text-shadow" id="logo-b">B</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-nav nav-link" href="#section-2">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-nav nav-link" href="#section-3">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-nav nav-link" href="#section-4">Work</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="col-12 col-md-10">
+        <!--Content-->
+      </div>
+    </div>
+  </div>
+
+  
 
     <script src="scripts.js"></script>
 </body>
