Work Section & Styling

--- a/index.html
+++ b/index.html
@@ -214,6 +214,9 @@
                             Django REST
                           </td>
                           <td class="text-center">
+                            JavaScript
+                          </td>
+                          <td class="text-center">
                             ReactJS
                           </td>
                           <td class="text-center">
@@ -223,7 +226,7 @@
                             VADER Sentiment
                           </td>
                           <td class="text-center">
-                            JavaScript
+                            PostgreSQL
                           </td>
                         </tr>
                       </tbody>
@@ -295,21 +298,43 @@
       <div class="col-12 col-md-10">
         <div class="row content align-items-center">
           <div class="col">
-            <p class="title d-flex justify-content-center">Work Experience</p>
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block carousel-img mx-auto" src="static/images/plantoasis.png" alt="First slide">
-                  <p class="text-center carousel-title">PlantOasis e-Commerce Store</p>
-                  <p class="carousel-text">My second year project. PlantOasis is an e-Commerce store built on the Django Web Framework. A team project which involved building
-                     the website from the ground up, allowing multiple users to browse, make purchases, and interact with items in the store simultaneously and seamlessly.
-                     A blog section, where registered users could make blog posts, comment on posts, and like other user's content that relates to flower and plant lovers.
-                    User Authentication was implemented using built-in Django authentication systems. Payment for products in the shop was implemented using the Stripe API.</p>
+                  <img class="d-block carousel-img mx-auto" src="static/images/cp.png" alt="First slide">
+                  <p class="text-center carousel-title">Colgate-Palmolive Support Services</p>
+                  <p class="text-center carousel-subtitle">Full-Stack Software Developer Intern</p>
+                  <p class="carousel-table text-center">Duties & Responsibilites</p>
+                  <table class="table">
+                    <tbody>
+                      <tr>
+                        <td class="text-center">
+                          Daily Developer Standups
+                        </td>
+                        <td class="text-center">
+                          Writing Core Backend Code
+                        </td>
+                        <td class="text-center">
+                          Working on Developer Stories
+                        </td>
+                        <td class="text-center">
+                          Organizing Monthly Charity Events
+                        </td>
+                        <td class="text-center">
+                          Hosting Developer Standups
+                        </td>
+                        <td class="text-center">
+                          Working With the Google Cloud Platform
+                        </td>
+                        <td class="text-center">
+                          Writing Documentation & Tests
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
                   <p class="carousel-table text-center">Technologies & Tools Used</p>
                   <table class="table">
                     <tbody>
@@ -318,19 +343,19 @@
                           Python
                         </td>
                         <td class="text-center">
-                          Django
-                        </td>
-                        <td class="text-center">
-                          HTTP
-                        </td>
-                        <td class="text-center">
-                          HTML5
-                        </td>
-                        <td class="text-center">
-                          CSS
+                          Django REST
                         </td>
                         <td class="text-center">
                           JavaScript
+                        </td>
+                        <td class="text-center">
+                          ReactJS
+                        </td>
+                        <td class="text-center">
+                          PostgreSQL
+                        </td>
+                        <td class="text-center">
+                          Google Cloud Platform
                         </td>
                       </tr>
                     </tbody>
