Grades page & Styling

--- a/index.html
+++ b/index.html
@@ -97,30 +97,32 @@
           <div class="row content align-items-center">
             <div class="col">
               <p class="title d-flex justify-content-center">Education</p>
-              <table class="table">
-                <tbody>
-                  <tr>
-                    <td>
-                      <p class="table-text">NFQ 8</p>
-                    </td>
-                    <td>
-                      <p class="table-text">
-                        Bachelor of Science (Hons) In Computing with Software
-                        Development
-                      </p>
-                    </td>
-                    <td>
-                      <p class="table-text">Technological University Dublin</p>
-                    </td>
-                    <td>
-                      <p class="table-text">Tallaght Campus</p>
-                    </td>
-                    <td>
-                      <p class="table-text">Sept 2019 - Jun 2023</p>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
+              <a href="grades.html">
+                <table class="table">
+                  <tbody>
+                    <tr>
+                      <td>
+                        <p class="table-text">NFQ 8</p>
+                      </td>
+                      <td>
+                        <p class="table-text">
+                          Bachelor of Science (Hons) In Computing with Software
+                          Development
+                        </p>
+                      </td>
+                      <td>
+                        <p class="table-text">Technological University Dublin</p>
+                      </td>
+                      <td>
+                        <p class="table-text">Tallaght Campus</p>
+                      </td>
+                      <td>
+                        <p class="table-text">Sept 2019 - Jun 2023</p>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </a>
             </div>
           </div>
         </div>
