--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="col">
       <div class="row">
         <!-- Navbar -->
-        <div class="col-md-2 col-shadow bg-cv-primary">
+        <div class="col-md-2 nav-col col-shadow bg-cv-primary">
           <nav class="navbar sticky-top bg-cv-primary">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
@@ -105,6 +105,9 @@
               <li class="nav-item">
                 <a class="btn btn-nav nav-link" href="#section-4">Work</a>
               </li>
+              <li class="nav-item">
+                <a class="btn btn-nav nav-link" href="#section-5">Hobbies</a>
+              </li>
             </ul>
           </nav>
         </div>
@@ -115,7 +118,7 @@
           <div id="section-1" class="row content align-items-center">
             <div class="col">
               <div class="row">
-                <div class="col-2 ml-auto">
+                <div class="col-2 ml-auto my-auto">
                   <img
                     id="profile-img"
                     src="static/images/profile.jpg"
@@ -134,6 +137,12 @@
                     <p id="role-one">Software</p>
                     &nbsp;
                     <p id="role-two">Developer</p>
+                  </div>
+                  <div class="row">
+                    <div class="col-9">
+                      <p>23 Year old Software Developer from Poland, Studying computing with software development in Dublin, Ireland. Interested in both Front and Back-end work,
+                         and a particular interest in the topic of Artificial Intelligence.</p>
+                    </div>
                   </div>
                   <div class="row">
                     <div class="col">
@@ -470,6 +479,13 @@
                 </a>
               </div>
             </div>
+          </div>
+
+          <!-- Section 5 About -->
+          <div id="section-5" class="row content align-items-center">
+            <div class="col">
+              <p class="title d-flex justify-content-center">Hobbies & Interests</p>
+              <p></p>
           </div>
         </div>
       </div>
