--- a/index.html
+++ b/index.html
@@ -485,7 +485,67 @@
           <div id="section-5" class="row content align-items-center">
             <div class="col">
               <p class="title d-flex justify-content-center">Hobbies & Interests</p>
-              <p></p>
+              <table class="table">
+                <tbody>
+                  <tr>
+                    <td>
+                      <p class="hobby-title">Languages</p>
+                    </td>
+                    <td>
+                      <p style="font-weight: bold;">Polish</p>
+                      <p>Native</p>
+                    </td>
+                    <td>
+                      <p style="font-weight: bold;">English</p>
+                      <p>Fluent</p>
+                    </td>
+                    <td>
+                      <p style="font-weight: bold;">German</p>
+                      <p>Basic</p>
+                    </td>
+                    <td>
+                      <p style="font-weight: bold;">Irish</p>
+                      <p>Basic</p>
+                    </td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p class="hobby-title">Academic</p>
+                    </td>
+                    <td>
+                      <p>Programming & Coding</p>
+                    </td>
+                    <td>
+                      <p>Mentoring friends & peers</p>
+                    </td>
+                    <td>
+                      <p>Learning new languages</p>
+                    </td>
+                    <td></td><td></td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p class="hobby-title">Personal</p>
+                    </td>
+                    <td>
+                      <p>Competitive & Casual Videogames</p>
+                    </td>
+                    <td>
+                      <p>Tabletop Games</p>
+                    </td>
+                    <td>
+                      <p>Sewing</p>
+                    </td>
+                    <td>
+                      <p>Formula One</p>
+                    </td>
+                    <td>
+                      <p>Bushcraft & Camping</p>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
           </div>
         </div>
       </div>
