--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
           <div id="section-1" class="row content align-items-center">
             <div class="col">
               <div class="row">
-                <div class="col-2 ml-auto my-auto">
+                <div class="col-md-2 img-col ml-auto my-auto">
                   <img
                     id="profile-img"
                     src="static/images/profile.jpg"
                     width="200px"
                   />
                 </div>
-                <div class="col-8">
+                <div class="col-md-8">
                   <div class="full-name">
                     <p id="name">Hubert</p>
                     &nbsp;
@@ -194,9 +194,8 @@
 
           <!-- Section 2 Education -->
           <div id="section-2" class="row content align-items-center">
-            <div class="col">
+            <div class="col-sm-12">
               <p class="title d-flex justify-content-center">Education</p>
-              <a href="grades.html">
                 <table class="table">
                   <tbody>
                     <tr>
@@ -220,16 +219,20 @@
                       <td>
                         <p class="table-text">Sept 2019 - Jun 2023</p>
                       </td>
+                      <td>
+                        <a class="btn btn-nav" href="grades.html">
+                          View Grades
+                        </a>
+                      </td>
                     </tr>
                   </tbody>
                 </table>
-              </a>
             </div>
           </div>
 
           <!-- Section 3 Projects -->
           <div id="section-3" class="row content align-items-center">
-            <div class="col">
+            <div class="col-md-12">
               <p class="title d-flex justify-content-center">Projects</p>
               <div
                 id="carouselExampleIndicators"
@@ -383,7 +386,7 @@
 
           <!-- Section 4 Work -->
           <div id="section-4" class="row content align-items-center">
-            <div class="col">
+            <div class="col-md-12">
               <p class="title d-flex justify-content-center">Work</p>
               <div
                 id="carouselExampleIndicators"
