Styling & README page

--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
               <li class="nav-item">
                 <a class="btn btn-nav nav-link" href="#section-5">Hobbies</a>
               </li>
+              <li class="nav-item">
+                <a style="margin-top: 5px;" class="btn btn-secondary nav-link" href="README.html">CA2 INFO</a>
+              </li>
             </ul>
           </nav>
         </div>
@@ -340,7 +343,8 @@
                       of Ireland. The course included high level overviews of
                       topics such as: Data Gathering, Data Pre-processing, Model
                       Selection, Model Training, Model Evaluation, Deep Learning
-                      and Ethics.
+                      and Ethics. The course has reached over 8000 secondary school
+                      students across Ireland.
                     </p>
                     <p class="carousel-table text-center">
                       Technologies & Tools Used
